Fixed on iPhones. Removed parallax and adjusted positioning to accomodate the absence of the parallax code.

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -674,6 +674,19 @@ nav#primary a:hover, nav#primary a.active {
 		top: 340px;
 	}
 
+	.planet {
+		top: 175px;
+	}
+
+	.astronaut {
+		top: 225px;
+		left: 42%; 
+
+		img {
+			height: 250px;
+		}
+	}
+
 	#dev-link {
 		top: 1040px;
 	}
@@ -686,6 +699,24 @@ nav#primary a:hover, nav#primary a.active {
 
 	.window2 {
 		top: 2380px;
+	}
+
+	.alien {
+		left: 4%;
+		top: 200px;
+
+		img {
+			height: 300px;
+		}
+	}
+
+	.planet2 {
+		left: -135%;
+		top: 	160px;
+
+		img {
+			height: 325px;
+		}
 	}
 
 	#resume-link {
